crates/context-macro/tests/constraints/init_seeds_keys.fail.stderr
error: Cannot specified keys and seeds at the same time.
  --> tests/constraints/init_seeds_keys.fail.rs:32:9
   |
32 |     pub counter: Mut<Account<Counter>>,
   |         ^^^^^^^
